feat: Implement full CRUD API with DB, JWT Auth and Redis Cache
